--- a/src/app/pages/nour/nour.component.html
+++ b/src/app/pages/nour/nour.component.html
@@ -180,15 +180,17 @@
                                       <ul class="list-unstyled hstack gap-1 mb-0">
                                         <li data-bs-toggle="tooltip" data-bs-placement="top" title="View">
                                           <a class="btn btn-sm btn-soft-primary" (click)="viewStudentDetails(student.id, student.stageId)">
+                                            
                                             <i class="mdi mdi-eye-outline"></i>
+
+                                          </a>
+                                          <a class="btn btn-sm btn-soft-primary"(click)="redirectToAttestationStage(student)">
+                                            
+                                            <i class="mdi mdi-eye-outline"></i>
+
                                           </a>
                                         </li>
-                                        <li data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                                          <a href="javascript:void(0);" class="btn btn-sm btn-soft-info" ><i class="mdi mdi-pencil-outline"></i></a>
-                                        </li>
-                                        <li data-bs-toggle="tooltip" data-bs-placement="top" title="Delete">
-                                          <a href="javascript:void(0);" data-bs-toggle="modal" class="btn btn-sm btn-soft-danger" ><i class="mdi mdi-delete-outline"></i></a>
-                                        </li>
+                                      
                                       </ul>
                                     </td>
                                   </tr>
@@ -411,7 +413,7 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let stage of stages">
-                                <td>{{ stage.nomSociete }}</td>
+                                <td>{{stage.nomSociete }}</td>
                                 <td>{{ stage.nomCoach }}</td>
                                 <td>{{ stage.startAt }}</td>
                                 <td>{{ stage.endAt }}</td>
@@ -433,43 +435,50 @@
                     </div>
                     
                   </div>
-                  <section *ngIf="taches.length > 0"
-                    >
+                  <section *ngIf="taches.length > 0">
                     <div class="card-body">
-                      <h4>Liste des tàches :</h4>
+                      <h4>Liste des tâches :</h4>
                       <div class="table-responsive">
                         <table class="table align-middle dt-responsive nowrap w-100 table-check" id="job-list">
                           <thead>
                             <tr>                            
-                              <th scope="col">Date Tàche</th>
-                              <th scope="col">Contenu Tàche</th>             
+                              <th scope="col">Date Tâche</th>
+                              <th scope="col">Contenu Tâche</th>
+                              <th scope="col">Actions</th> <!-- Ajout de la colonne Actions -->
                             </tr>
                           </thead>
                           <tbody>
-                              <tr *ngFor="let tache of taches">
-                                  <td>{{ tache.date }}</td>
-                                  <td>{{ tache.libelle }}</td>
-                                  <td>
-                  
+                            <tr *ngFor="let tache of taches">
+                              <td>{{ tache.date }}</td>
+                              <td>{{ tache.libelle }}</td>
+                              <td>
                                 <ul class="list-unstyled hstack gap-1 mb-0">
-                                  
                                   <li data-bs-toggle="tooltip" data-bs-placement="top" title="Valider">
-                                      <a href="javascript:void(0);" class="btn btn-sm btn-soft-info"  (click)="validerTache(tache.id)">
-                                        <i class="mdi mdi-pencil-outline"></i>
-                                      </a>
-                                    </li>
+                                    <button class="btn btn-sm btn-soft-info" (click)="validerTache(tache.id)">
+                                      <i class="mdi mdi-pencil-outline"></i> Valider
+                                    </button>
+                                  </li>
                                   <li data-bs-toggle="tooltip" data-bs-placement="top" title="Refuser">
-                                    <a href="javascript:void(0);" data-bs-toggle="modal" class="btn btn-sm btn-soft-danger" (click)="rejeterTache(tache.id)"><i class="mdi mdi-delete-outline"></i></a>
+                                    <button class="btn btn-sm btn-soft-danger" (click)="openRejectionReasonInput(tache.id)">
+                                      <i class="mdi mdi-delete-outline"></i> Refuser
+                                    </button>
                                   </li>
                                 </ul>
+                                <!-- Déplacer la zone de texte sous les boutons -->
+                                <div *ngIf="tacheId === tache.id">
+                                  <textarea class="form-control mt-2" rows="3" [(ngModel)]="rejectionReason" placeholder="Entrez la raison du rejet"></textarea>
+                                  <button class="btn btn-primary mt-2" (click)="rejectTask()">Confirmer</button>
+                                </div>
                               </td>
                             </tr>
                           </tbody>
                         </table>
                       </div>
-                      <!--end row-->
                     </div>
                   </section>
+                  
+                  
+                
                 </section>
               </cdk-step>
               
@@ -543,18 +552,64 @@
                   <span>Attestation</span>
                 </ng-template>
                 <section *ngIf="cdkStepper.selectedIndex === 3">
-                  <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                      <div class="text-center">
-                        <div class="mb-4">
-                          <i class="mdi mdi-check-circle-outline text-success display-4"></i>
-                        </div>
-                        <div>
-                          <h5>Attestation De Stage</h5>
-                          <p class="text-muted">If several languages coalesce, the grammar of the resulting</p>
+                  <div class="card-body">
+                  
+                    <div class="table-responsive">
+                      <table class="table align-middle dt-responsive nowrap w-100 table-check" id="job-list">
+                        <thead>
+                          <tr>
+                            <th scope="col">Nom_Etudiant</th>
+                            <th scope="col">Prenom_Etudiant</th>
+                            <th scope="col">Telephone</th>
+                            <th scope="col">Email</th>
+                         
+                          
+                            
+                            <th scope="col">Action</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr  *ngFor="let student of students">
+                            <th scope="row"  >{{ student.firstName }}</th>
+                            <td> {{ student.lastName }} </td>
+                            <td>{{ student.phoneNumber }} </td>
+                            <td>{{ student.login }}</td>
+                           
+                           
+                          
+                            <td>
+                              <ul class="list-unstyled hstack gap-1 mb-0">
+                                <li data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+                                  <a class="btn btn-sm btn-soft-primary" (click)="viewStudentDetails(student.id, student.stageId)">
+                                    
+                                    <i class="mdi mdi-eye-outline"></i>
+
+                                  </a>
+                                  <a class="btn btn-sm btn-soft-primary"(click)="redirectToAttestationStage(student)">
+                                    
+                                    <i class="mdi mdi-eye-outline"></i>
+
+                                  </a>
+                                </li>
+                              
+                              </ul>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="row justify-content-between align-items-center">
+                      <div class="col-auto me-auto">
+                      </div>
+                      <div class="col-auto">
+                        <div class="text-md-right float-md-end pagination-rounded">
+                          <ul class="pagination pagination-rounded justify-content-end mb-2">
+                          </ul>
                         </div>
                       </div>
+                      <!--end col-->
                     </div>
+                    <!--end row-->
                   </div>
   
                   <ul class="list-inline wizard d-flex justify-content-end mb-0">
