--- a/src/app/demande-details/demande-details.component.html
+++ b/src/app/demande-details/demande-details.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="card">
-    <div class="card-header">
+    <div class="card-header bg-primary text-white">
       <h2>Demande Details</h2>
     </div>
     <div class="card-body">
@@ -16,6 +16,14 @@
         </div>
         <div class="mb-3">
           <strong>Etat:</strong> {{ demande.etat }}
+        </div>
+        <div class="mb-3">
+          <strong>Lettre de motivation:</strong> 
+          <iframe [src]="demande.lettreMotivation" class="embed-responsive" frameborder="0"></iframe>
+        </div>
+        <div class="mb-3">
+          <strong>CV:</strong> 
+          <iframe [src]="demande.cvPath" class="embed-responsive" frameborder="0"></iframe>
         </div>
         
         <!-- Add more details as needed -->
