--- a/src/app/pages/listeoffreetudiant/listeoffreetudiant.component.html
+++ b/src/app/pages/listeoffreetudiant/listeoffreetudiant.component.html
@@ -50,7 +50,19 @@
                   </div>
                   <div>
                     <strong>Type de Stage :</strong> {{ offre.type }}
+                  
+                    <button class="btn btn-primary" (click)="likeOffre(offre.id)">
+    <i class="fas fa-thumbs-up"></i> Like ({{ offre.likes }})
+  </button>
+  <button class="btn btn-primary" (click)="dislikeOffre(offre.id)">
+    <i class="fas fa-thumbs-down"></i> Dislike ({{ offre.dislikes }})
+  </button>
                   </div>
+                  
+
+
+
+
                   <!-- Bouton pour sélectionner l'offre -->
                   <div *ngIf="selectedOffer === offre" class="mt-3">
                     <form (ngSubmit)="submitComment()">
@@ -107,9 +119,6 @@
 </ul>
 
 <!-- Bouton pour afficher ou masquer les réponses -->
-<button class="btn btn-primary mt-3" (click)="toggleRepliesVisibility(comment)">
-  <i class="fas fa-comments"></i> {{ comment.showReplies ? 'Masquer les réponses' : 'Afficher les réponses' }}
-</button>
 
                         </div>
                       </li>
