--- a/src/app/pages/forum/listforum/listforum.component.html
+++ b/src/app/pages/forum/listforum/listforum.component.html
@@ -34,7 +34,7 @@
                   <div [innerHTML]="question.content" ></div>  
               </div>
               <div class="col-10">
-                <div *ngFor="let tag of question.tags" class="badge bg-primary me-1 mb-1">
+                <div *ngFor="let tag of question.tags" class="badge me-1 mb-1" style="background-color: rgb(245, 73, 73);">
                   {{ tag.name }}
                 </div>
               </div>
