--- a/src/app/pages/listeoffreetudiant/listeoffreetudiant.component.scss
+++ b/src/app/pages/listeoffreetudiant/listeoffreetudiant.component.scss
@@ -28,6 +28,36 @@
   .entreprise-details {
     background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
   }
-      
+      /* Gradient Background */
+.gradient-bg {
+  background: linear-gradient(45deg, #ff6a00, #ee0979);
+}
+
+/* Hover Effects */
+.card:hover {
+  transform: translateY(-5px);
+  transition: transform 0.3s ease-in-out;
+}
+
+.btn:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.btn-primary {
+  background-color: #008CBA;
+  border: none;
+  color: white;
+  padding: 10px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 12px;
+}
+
   
   
