--- a/src/app/pages/processusstageetudiant/processusstageetudiant.component.html
+++ b/src/app/pages/processusstageetudiant/processusstageetudiant.component.html
@@ -521,7 +521,7 @@
                                     </a>
                                   </li>
                                 <li data-bs-toggle="tooltip" data-bs-placement="top" title="Delete">
-                                  <a href="javascript:void(0);" data-bs-toggle="modal" class="btn btn-sm btn-soft-danger"><i class="mdi mdi-delete-outline"></i></a>
+                                  <a href="javascript:void(0);" data-bs-toggle="modal" class="btn btn-sm btn-soft-danger" (click)="deleteTache(tache)"><i class="mdi mdi-delete-outline"></i></a>
                                 </li>
                               </ul>
                             </td>
