--- a/src/app/pages/user/profile/change-password/change-password.component.html
+++ b/src/app/pages/user/profile/change-password/change-password.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 
     <!-- start page title -->
-    <app-page-title title="Form Layouts" [breadcrumbItems]="breadCrumbItems"></app-page-title>
+    <app-page-title title="Chnage Password" [breadcrumbItems]="breadCrumbItems"></app-page-title>
     <!-- end page title -->
 
     <div class="row justify-content-center">
@@ -10,11 +10,17 @@
             <div class="card">
                 <div class="card-body">
                     <form  [formGroup]="verifForm" (ngSubmit)="onSubmit()">
+                        <div  *ngIf="isError" class="alert alert-danger text-center mb-4" role="alert">
+                            Something went wrong try again !
+                        </div>
                         <div class="row mb-4">
                             <label for="oldPass" class="col-sm-3 col-form-label">Old Password</label>
                             <div class="col-sm-9">
                                 <input type="password" class="form-control" id="oldPass" 
                                 formControlName="oldPass" [ngClass]="{ 'is-invalid': submitted && form.oldPass.errors }">
+                                <div *ngIf="submitted && form.oldPass.errors" class="invalid-feedback">
+                                    <div *ngIf="form.oldPass.errors.required">Old Password is required</div>
+                                </div>
                             </div>
                         </div>
                         
@@ -23,6 +29,24 @@
                             <div class="col-sm-9">
                                 <input type="password" class="form-control" id="newPass"
                                 formControlName="newPass" [ngClass]="{ 'is-invalid': submitted && form.newPass.errors }">
+                                <div *ngIf="submitted && form.newPass.errors" class="invalid-feedback">
+                                    <div *ngIf="form.newPass.errors.required">New Password is required</div>
+                                    <div *ngIf="form.newPassword.errors.pattern">Password is must be mixed between letters , Numbers and */@</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+                            <label for="newPassConfirm" class="col-sm-3 col-form-label"> Confirm New Password </label>
+                            <div class="col-sm-9">
+                                <input type="password" class="form-control" id="newPassConfirm"
+                                formControlName="newPassConfirm" [ngClass]="{ 'is-invalid': submitted && form.newPassConfirm.errors }">
+                                <div *ngIf="submitted && form.newPassConfirm.errors" class="invalid-feedback">
+                                    <div *ngIf="form.newPassConfirm.errors.required">New Password confirm is required</div>
+                                    <div *ngIf="form.newPassword.errors.pattern">Password is must be mixed between letters , Numbers and */@</div>
+                                    <div *ngIf="form.newPassConfirm.errors.mismatch && form.newPassConfirm.touched">
+                                        the confirmed password didnt match !
+                                      </div>
+                                </div>
                             </div>
                         </div>
 
@@ -41,10 +65,10 @@
         <div class="card">
             <div class="card-body">
                 <div>
-                    <button type="button" *ngIf="bl" #myButton class="btn btn-primary" (click)="openModal(content)">Popup form</button>
+                    <button type="button" #myButton class="btn btn-primary" hidden>Popup form</button>
                 </div>
                 <!-- Modal Open -->
-                <ng-template #content role="document" let-modal>
+                <ng-template #content role="document" let-modal  >
                     <div class="modal-header">
                         <h5 class="modal-title mt-0">Form</h5>
                         <button type="button" class="btn-close" aria-hidden="true"
@@ -76,27 +100,51 @@
                                                                 <div class="row">
                                                                 <div class="col-sm-2">
                                                                     <input type="text" class="form-control" id="code1" 
-                                                                    formControlName="code1" [ngClass]="{ 'is-invalid': submitted && form1.code1.errors }">
+                                                                    formControlName="code1" [ngClass]="{ 'is-invalid': submit && form1.code1.errors }">
+                                                                    <div *ngIf="submit && form1.code1.errors" class="invalid-feedback">
+                                                                        <div *ngIf="form1.code1.errors.required">first number requis</div>
+                                                                        <div *ngIf="form1.code1.errors.minlength || form1.code1.errors.maxlength"> only one number is required</div>
+                                                                    </div>
                                                                 </div>
                                                                 <div class="col-sm-2">
                                                                     <input type="text" class="form-control" id="code2" 
                                                                     formControlName="code2" [ngClass]="{ 'is-invalid': submit && form1.code2.errors }">
+                                                                    <div *ngIf="submit && form1.code2.errors" class="invalid-feedback">
+                                                                        <div *ngIf="form1.code2.errors.required">Seconde number requis</div>
+                                                                        <div *ngIf="form1.code2.errors.minlength || form1.code2.errors.maxlength"> only one number is required</div>
+                                                                    </div>
                                                                 </div>
                                                                 <div class="col-sm-2">
                                                                     <input type="text" class="form-control" id="code3" 
                                                                     formControlName="code3" [ngClass]="{ 'is-invalid': submit && form1.code3.errors }">
+                                                                    <div *ngIf="submit && form1.code3.errors" class="invalid-feedback">
+                                                                        <div *ngIf="form1.code3.errors.required">Therd number requis</div>
+                                                                        <div *ngIf="form1.code3.errors.minlength || form1.code3.errors.maxlength"> only one number is required</div>
+                                                                    </div>
                                                                 </div>
                                                                 <div class="col-sm-2">
                                                                     <input type="text" class="form-control" id="code4" 
                                                                     formControlName="code4" [ngClass]="{ 'is-invalid': submit && form1.code4.errors }">
+                                                                    <div *ngIf="submit && form1.code4.errors" class="invalid-feedback">
+                                                                        <div *ngIf="form1.code4.errors.required">Fourth number requis</div>
+                                                                        <div *ngIf="form1.code4.errors.minlength || form1.code4.errors.maxlength"> only one number is required</div>
+                                                                    </div>
                                                                 </div>
                                                                 <div class="col-sm-2">
                                                                     <input type="text" class="form-control" id="code5" 
                                                                     formControlName="code5" [ngClass]="{ 'is-invalid': submit && form1.code5.errors }">
+                                                                    <div *ngIf="submit && form1.code5.errors" class="invalid-feedback">
+                                                                        <div *ngIf="form1.code5.errors.required">Fifth number requis</div>
+                                                                        <div *ngIf="form1.code5.errors.minlength || form1.code5.errors.maxlength"> only one number is required</div>
+                                                                    </div>
                                                                 </div>
                                                                 <div class="col-sm-2">
                                                                     <input type="text" class="form-control" id="code5" 
                                                                     formControlName="code6" [ngClass]="{ 'is-invalid': submit && form1.code6.errors }">
+                                                                    <div *ngIf="submit && form1.code6.errors" class="invalid-feedback">
+                                                                        <div *ngIf="form1.code6.errors.required">Sixth number requis</div>
+                                                                        <div *ngIf="form1.code6.errors.minlength || form1.code6.errors.maxlength"> only one number is required</div>
+                                                                    </div>
                                                                 </div>
 
 
