--- a/src/app/pages/user/add-student/add-student.component.html
+++ b/src/app/pages/user/add-student/add-student.component.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="avatar-lg">
                       <div class="avatar-title bg-light rounded-circle">
-                        <img src="assets/images/users/user-dummy-img.jpg" id="member-img" class="avatar-md rounded-circle h-auto" />
+                        <img src="http://res.cloudinary.com/dmcashown/image/upload/v1709758217/znnmhbjdh9ovweqssalb.jpg" id="member-img" class="avatar-md rounded-circle h-auto" />
                       </div>
                     </div>
                   </div>
