--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -8,8 +8,9 @@
     <ul class="metismenu list-unstyled" id="side-menu" #sideMenu>
       <!-- {{menuItems}} -->
       <ng-container *ngFor="let item of menuItems">
-        <li class="menu-title" *ngIf="item.isTitle">{{ item.label | translate }}</li>
-        <li *ngIf="!item.isTitle && !item.isLayout">
+        <div *ngIf="isDisabled(item.role)==true">
+        <li  class="menu-title" *ngIf="item.isTitle ">{{ item.label | translate }}</li>
+        <li *ngIf=" !item.isLayout">
           <a *ngIf="hasItems(item)" href="javascript:void(0);" class="is-parent"
             [ngClass]="{'has-arrow': !item.badge, 'has-dropdown': item.badge}">
             <i class="bx {{item.icon}}" *ngIf="item.icon"></i>
@@ -48,6 +49,7 @@
             </li>
           </ul>
         </li>
+      </div>
       </ng-container>
     </ul>
   </div>
